<resources>
    <string name="app_name">FootballMatchScheduleKt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="favorites_match">Favorites Match</string>
    <string name="match">Matchs</string>
    <string name="teams">Teams</string>
</resources>
