<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_past"
            android:icon="@drawable/ic_date"
            android:title="@string/match"/>

    <item
            android:id="@+id/navigation_next"
            android:icon="@drawable/ic_team"
            android:title="@string/teams"/>

    <item
            android:id="@+id/navigation_favorite"
            android:icon="@drawable/ic_stars"
            android:title="@string/favorites_match"/>

</menu>
